# KiK_linux

./: .makefile.swp  CMakeLists.txt  MyGame.cpp  MyGame.h  ReadMe.md  gtest_output.txt  main.cpp  main_test.cpp  makefile
cmake_modules/: FindSFML.cmake
